<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sync Sample</string>
    <string name="action_sync">Sync now</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_login">Login</string>
    <string name="msg_empty_username">Please enter your username</string>
    <string name="msg_login_failed">The username or password isn\'t valid</string>
    <string name="msg_authenticating">Authenticating...</string>
    <string name="no_todos">No todos found</string>
    <string name="title_activity_edit_todo">Edit Todo</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="conflictMessage">The Todo item has been changed on the server during your change.</string>
	<string name="overwriteServer">Keep local changes</string>
	<string name="overwriteLocal">Overwrite local changes</string>
</resources>